# queens-basic-api

./: .gitignore  LICENSE  README.md  requirements.txt
app/: db_memory.py  helpers.py  main.py  schemas.py
app_v1/: helpers.py  main.py  requirements.txt
app_v1/tests/unit/: test_helpers.py  test_main.py
app_v2/: .env-example  auth.py  config.py  database.py  helpers.py  main-debug.py  main.py  pyproject.toml  requirements.txt  schemas.py
app_v2/auth/: auth_bearer.py  auth_handler.py
app_v2/db/: database.py
app_v2/routers/: categories.py  cities.py  index.py  queens.py  users.py
app_v2/schemas/: auth.py  category.py  city.py  enums.py  queen.py
docs/: openapi.json  openapi.yaml
tests/unit/: test_db_memory.py  test_helpers.py
