[tool.poetry]
name = "queens-api-v2"
version = "2.1.0"
description = ""
authors = ["Natalia Czapska <czapskanatalia@gmail.com>"]
readme = "README.md"
packages = [{include = "queens_api_v2"}]

[tool.poetry.dependencies]
python = "^3.10"
email-validator = "^1.3.0"
fastapi = "^0.87.0"
bcrypt = "^4.0.1"
deta = "^1.1.0"
PyJWT = "^2.6.0"
python-dotenv = "^0.21.0"
uvicorn = "^0.20.0"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.0"
requests = "^2.28.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
